force-app/main/default/objects/FieloCH__Challenge__c/FieloCH__Challenge__c.object-meta.xml
<CustomObject>
    <customHelpPage>FieloCH__ChallengeHelpBackend</customHelpPage>
    <label>Challenge</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Challenges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>