force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__AcomplishAction__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__AcomplishAction__c</fullName>
    <label>Accomplish Action</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FieloCH__CompetitionType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Finish</fullName>
                <default>true</default>
                <label>Finish</label>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
            <value>
                <fullName>Continue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>