force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__Category__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>