force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__Challenge__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Challenge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the "father" on a series.</description>
    <label>Challenge</label>
    <referenceTo>FieloCH__Challenge__c</referenceTo>
    <relationshipLabel>Challenges</relationshipLabel>
    <relationshipName>Challenges</relationshipName>
    <type>Lookup</type>
</CustomField>