force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__CompetitionType__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__CompetitionType__c</fullName>
    <description>If Challenge is competition type, Defines if is by performance, by time or by objective that completes challenge</description>
    <inlineHelpText>-Objective:  Each member that accomplishes the challenge wins
-Time: Its a race time, wins the first member that completes the challenge
-Performance: It’s a competition by value, the member with best performance  wins challenge</inlineHelpText>
    <label>Competition Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FieloCH__Mode__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Objective</fullName>
                <default>true</default>
                <label>Objective</label>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>