force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__DaysLeft__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__DaysLeft__c</fullName>
    <formula>FieloCH__FinalDate__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>