force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__InjectBadgeIds__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__InjectBadgeIds__c</fullName>
    <label>Inject BadgeIds</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>