force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__IsActive__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>