force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__MissionsCounter__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__MissionsCounter__c</fullName>
    <label>Mission Counter</label>
    <summaryForeignKey>FieloCH__MissionChallenge__c.FieloCH__Challenge__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>