force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__Mode__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Mode__c</fullName>
    <description>The mode define if the missions are  a competition between members or a collaborative mission between all the challenge community.</description>
    <inlineHelpText>Select Competition if you want to create a challenge to each member or Collaborative if you want to create a single mission that will be accomplish by the hole challenge community.</inlineHelpText>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competition</fullName>
                <default>true</default>
                <label>Competition</label>
            </value>
            <value>
                <fullName>Collaborative</fullName>
            </value>
            <value>
                <fullName>Teams</fullName>
            </value>
            <value>
                <fullName>Groups</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>