force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__Objects__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Objects__c</fullName>
    <label>Objects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FieloEE__Event__c</fullName>
            </value>
            <value>
                <fullName>FieloEE__Transaction__c</fullName>
            </value>
            <value>
                <fullName>FieloEE__BadgeMember__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>