force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__onFriday__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__onFriday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Friday</label>
    <type>Checkbox</type>
</CustomField>