force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__onMonday__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__onMonday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monday</label>
    <type>Checkbox</type>
</CustomField>