force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__onSaturday__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__onSaturday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday</label>
    <type>Checkbox</type>
</CustomField>