force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__onSunday__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__onSunday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sunday</label>
    <type>Checkbox</type>
</CustomField>