force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__onThursday__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__onThursday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thursday</label>
    <type>Checkbox</type>
</CustomField>