force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__onTuesday__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__onTuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tuesday</label>
    <type>Checkbox</type>
</CustomField>