force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__onWednesday__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__onWednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wednesday</label>
    <type>Checkbox</type>
</CustomField>