force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__Picture__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Picture__c</fullName>
    <formula>IF( NOT( ISBLANK(FieloCH__AttachmentId__c) ), IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39;+FieloCH__AttachmentId__c, Name, 60, 60),  Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture</label>
    <type>Text</type>
</CustomField>