force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__Processed__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>