force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__RecurrenceAutoSubscribe__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__RecurrenceAutoSubscribe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy subscription list from previous</label>
    <type>Checkbox</type>
</CustomField>