force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__RecurrenceDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__RecurrenceDayOfMonth__c</fullName>
    <label>RecurrenceDayOfMonth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>