force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__RecurrenceInstance__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__RecurrenceInstance__c</fullName>
    <label>RecurrenceInstance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
                <default>true</default>
                <label>1st</label>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>4th</fullName>
            </value>
            <value>
                <fullName>last</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>