force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__RecurrenceInterval__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__RecurrenceInterval__c</fullName>
    <label>Recurrence Interval</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>