force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__Repeatable__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Repeatable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checks if the members can participate again although it has won the challenge.</inlineHelpText>
    <label>Repeatable</label>
    <type>Checkbox</type>
</CustomField>