force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__RewardCounter__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__RewardCounter__c</fullName>
    <label>Reward Counter</label>
    <summaryForeignKey>FieloCH__ChallengeReward__c.FieloCH__Challenge__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>