force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Status__c</fullName>
    <formula>IF(  ! FieloCH__IsActive__c, "Inactive",
  IF ( FieloCH__FinalDate__c &lt; TODAY() || (ISPICKVAL(FieloCH__CompetitionType__c,&#39;Performance&#39;) &amp;&amp; FieloCH__Processed__c)
            || (ISPICKVAL(FieloCH__Mode__c,&#39;Collaborative&#39;) &amp;&amp; FieloCH__Processed__c), "Finished",
    IF (FieloCH__InitialDate__c &lt;= TODAY() &amp;&amp; FieloCH__FinalDate__c &gt;= TODAY() , "Active", "Future" ) ) )</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>