force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__SubscribeAutomatically__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__SubscribeAutomatically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscribe Automatically</label>
    <type>Checkbox</type>
</CustomField>