force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__SubscribeFrom__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__SubscribeFrom__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>From</label>
    <type>Date</type>
</CustomField>