force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__Subscription__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Subscription__c</fullName>
    <inlineHelpText>- Open: By subscription, any member can subscribe.
- Closed: Without subscription, Administrator subscribes the members</inlineHelpText>
    <label>Subscription Mode</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FieloCH__Mode__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>