force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__TableType__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__TableType__c</fullName>
    <label>Position Table Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FieloCH__CompetitionType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Position Ranking</fullName>
            </value>
            <value>
                <fullName>Value Ranking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>