force-app/main/default/objects/FieloCH__Challenge__c/fields/FieloCH__Visible__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If is mark as not visible the members of challenge do not know that are in the challenge until win.</inlineHelpText>
    <label>Is Visible</label>
    <type>Checkbox</type>
</CustomField>