force-app/main/default/objects/FieloCH__Challenge__c/recordTypes/FieloCH__Series.recordType-meta.xml
<RecordType>
    <fullName>FieloCH__Series</fullName>
    <active>true</active>
    <label>Series</label>
</RecordType>