force-app/main/default/objects/FieloCH__Challenge__c/recordTypes/FieloCH__Single.recordType-meta.xml
<RecordType>
    <fullName>FieloCH__Single</fullName>
    <active>true</active>
    <label>Single</label>
</RecordType>