force-app/main/default/objects/FieloCH__Challenge__c/validationRules/FieloCH__Edit_Challenge_Competition.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCH__Edit_Challenge_Competition</fullName>
    <active>true</active>
    <description>If the competition type is modified, check that is has no missions associated.</description>
    <errorConditionFormula>IF( AND(FieloCH__MissionsCounter__c &gt; 0,   ISCHANGED(FieloCH__CompetitionType__c) ), true, false)</errorConditionFormula>
    <errorDisplayField>FieloCH__CompetitionType__c</errorDisplayField>
    <errorMessage>Cannot change Competition Type if already have missions.</errorMessage>
</ValidationRule>