force-app/main/default/objects/FieloCH__Challenge__c/validationRules/FieloCH__Edit_Challenge_Mode.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCH__Edit_Challenge_Mode</fullName>
    <active>true</active>
    <description>Check if it has missions or members associated in order to let the user modify the challenge.</description>
    <errorConditionFormula>IF( AND( FieloCH__MissionsCounter__c &gt; 0, ISCHANGED( FieloCH__Mode__c ) ), true, false)</errorConditionFormula>
    <errorDisplayField>FieloCH__Mode__c</errorDisplayField>
    <errorMessage>Cannot change Mode if already have missions or community associated.</errorMessage>
</ValidationRule>