force-app/main/default/objects/FieloCH__Challenge__c/validationRules/FieloCH__Edit_Competition_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCH__Edit_Competition_Type</fullName>
    <active>true</active>
    <description>Check if it has rewards associated.</description>
    <errorConditionFormula>AND(If( FieloCH__RewardCounter__c &gt; 0, true, false ) , ISCHANGED(FieloCH__CompetitionType__c))</errorConditionFormula>
    <errorDisplayField>FieloCH__CompetitionType__c</errorDisplayField>
    <errorMessage>Cannot modified Competition Type if you had associated rewards. Go to "Manage Rewards"  and delete them first.</errorMessage>
</ValidationRule>