force-app/main/default/objects/FieloCH__Challenge__c/validationRules/FieloCH__Final_Date_After_Initial_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCH__Final_Date_After_Initial_Date</fullName>
    <active>true</active>
    <errorConditionFormula>FieloCH__InitialDate__c &gt;  FieloCH__FinalDate__c</errorConditionFormula>
    <errorMessage>Initial Date must be before Final Date</errorMessage>
</ValidationRule>