force-app/main/default/objects/FieloCH__Challenge__c/validationRules/FieloCH__Mode_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCH__Mode_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(FieloCH__Mode__c, &#39;&#39;)</errorConditionFormula>
    <errorDisplayField>FieloCH__Mode__c</errorDisplayField>
    <errorMessage>Mode must be selected</errorMessage>
</ValidationRule>