force-app/main/default/objects/FieloCH__Challenge__c/validationRules/FieloCH__Recurrence_Type_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCH__Recurrence_Type_Valid</fullName>
    <active>true</active>
    <description>Check that the Recurrence Type choosen is valid for the Mode and for the Competition Type</description>
    <errorConditionFormula>AND(
    OR( ISPICKVAL( FieloCH__CompetitionType__c , "Performance"), ISPICKVAL(  FieloCH__CompetitionType__c , "Time")),
    FieloCH__Repeatable__c = TRUE
)</errorConditionFormula>
    <errorMessage>Repeatable is valid only for Objective Competition Type</errorMessage>
</ValidationRule>