force-app/main/default/objects/FieloCH__Challenge__c/validationRules/FieloCH__Subscription_Mode_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCH__Subscription_Mode_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(FieloCH__Subscription__c, "")</errorConditionFormula>
    <errorDisplayField>FieloCH__Subscription__c</errorDisplayField>
    <errorMessage>Subscription Mode is Required</errorMessage>
</ValidationRule>