force-app/main/default/objects/FieloCH__Challenge__c/validationRules/FieloCH__Subscription_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCH__Subscription_Period</fullName>
    <active>true</active>
    <description>Check that the period define for subscription is not greater than the duration of the Challenge</description>
    <errorConditionFormula>FieloCH__SubscribeTo__c &gt; FieloCH__FinalDate__c</errorConditionFormula>
    <errorDisplayField>FieloCH__SubscribeTo__c</errorDisplayField>
    <errorMessage>Subscription period Final Date cannot be greater than Challenge Final Date.</errorMessage>
</ValidationRule>