force-app/main/default/objects/FieloCH__Challenge__c/validationRules/FieloCH__Subscription_Period_Valid_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCH__Subscription_Period_Valid_Date</fullName>
    <active>true</active>
    <description>Check that the period is the same or before from the Active period of the Challenge.</description>
    <errorConditionFormula>AND( NOT( OR( ISBLANK(FieloCH__SubscribeFrom__c), ISNULL(FieloCH__SubscribeFrom__c) )),
OR( FieloCH__InitialDate__c &lt;  FieloCH__SubscribeFrom__c, FieloCH__SubscribeFrom__c &gt;  FieloCH__SubscribeTo__c ))</errorConditionFormula>
    <errorDisplayField>FieloCH__SubscribeFrom__c</errorDisplayField>
    <errorMessage>The Subscription Initial Date cannot be greater than Subscription Final Date or greater than Challenge Initial Date</errorMessage>
</ValidationRule>