force-app/main/default/objects/FieloCH__Challenge__c/listViews/FieloCH__Active_Challenges.listView-meta.xml
<ListView>
    <fullName>FieloCH__Active_Challenges</fullName>
    <columns>NAME</columns>
    <columns>FieloCH__Challenge__c</columns>
    <columns>FieloCH__CompetitionType__c</columns>
    <columns>FieloCH__Subscription__c</columns>
    <columns>FieloCH__Mode__c</columns>
    <columns>FieloCH__IsActive__c</columns>
    <columns>FieloCH__SubscribeFrom__c</columns>
    <columns>FieloCH__MissionsCounter__c</columns>
    <columns>FieloCH__Status__c</columns>
    <columns>FieloCH__Program__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FieloCH__IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Challenges</label>
    <language>en_US</language>
</ListView>