force-app/main/default/objects/FieloCH__Challenge__c/listViews/FieloCH__All.listView-meta.xml
<ListView>
    <fullName>FieloCH__All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>FieloCH__Picture__c</columns>
    <columns>NAME</columns>
    <columns>FieloCH__Challenge__c</columns>
    <columns>FieloCH__Program__c</columns>
    <columns>FieloCH__InitialDate__c</columns>
    <columns>FieloCH__FinalDate__c</columns>
    <columns>FieloCH__IsActive__c</columns>
    <columns>FieloCH__Status__c</columns>
    <columns>FieloCH__Mode__c</columns>
    <columns>FieloCH__CompetitionType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>