force-app/main/default/objects/FieloCH__Challenge__c/listViews/FieloCH__Escalabilidad.listView-meta.xml
<ListView>
    <fullName>FieloCH__Escalabilidad</fullName>
    <columns>NAME</columns>
    <columns>FieloCH__IsActive__c</columns>
    <columns>FieloCH__Mode__c</columns>
    <columns>FieloCH__Objects__c</columns>
    <columns>FieloCH__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Escalabilidad</value>
    </filters>
    <label>Escalabilidad</label>
    <language>en_US</language>
</ListView>